fix-nav + fix burger menu on mobile

--- a/local_packages/football/Resources/Public/Css/index.css
+++ b/local_packages/football/Resources/Public/Css/index.css
@@ -11417,6 +11417,23 @@ a.main-logo:hover {
   z-index: 1;
 }
 
+.navbar-toggler-icon {
+  position: relative;
+  width: 1.25rem;
+  height: 0.125rem;
+  background-color: #2D479A;
+}
+
+.navbar-toggler-icon:before {
+  content: " ";
+  position: absolute;
+  top: -0.375rem;
+  left: 0;
+  height: 0.125rem;
+  width: 1.25rem;
+  background: #2D479A;
+}
+
 .call-to-action {
   color: #FFFFFF;
   background-color: #002345;
